--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ghostbusters Text Adventure Game</title>
+    <title>Mothman Text Adventure Game</title>
 </head>
 <body>
-    "Ghostbusters Text Adventure Game"
+    "Mothman Text Adventure Game"
+    <script src="textGame.js"></script>
 </body>
 </html>
