--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mothman.css">
     <title>Mothman Text Adventure Game</title>
+    
 </head>
 <body>
     "Mothman Text Adventure Game"
-    <script src="textGame.js"></script>
+   <script src="textGame.js"></script>
 </body>
 </html>
